@@ -25,6 +25,7 @@ include("sh_ents_extend.lua")
 include("sh_npc_extend.lua")
 include("sh_player_extend.lua")
 include("sh_entity_extend.lua")
+include("sh_weapon_extend.lua")
 include("sh_roundsystem.lua")
 include("sh_sound_env.lua")
 include("sh_vehicles.lua")
